# dotc

./: .gitignore  LICENSE  MANIFEST.in  README.md  dotc.py  orig_reqs.txt  pyproject.toml  test_dotc_spawn.py
install/: cli_tools.py  migrate.txt  newpypi.py
src/dotc/: __init__.py  __main__.py  dotc.py
src/dotc/inc/json/: dict_tracy.json
tests/: test_all.py
tools/: sort.py
