# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotc"
version = "0.3.5"
description = "DOTC (like Yahtzee) - Access Nested Dicts and Lists via Dots"
readme = "README.md"
authors = [{ name = "Mike Steele", email = "mike@mikesteele.us" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nested", "dot", "dict", "list", "datastructure", "dotspace", "dotdict", "dotlist", "xml", "dotc"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["bumpver", "build", "twine", "wheel", "setuptools"]

[project.urls]
Homepage = "https://github.com/soulrx/dotc"

[project.scripts]
dotc = "dotc.__main__:main"

[tool.bumpver]
current_version = "0.3.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/dotc/__init__.py" = ["{version}"]

